@@ -35,6 +35,8 @@ Version 2.1.2
    - Bugfix: Building certificate chain automatically (this fixes debian
         bug #226914)
    - Bugfix: Don't load config file twice in gnome mode
+   - Cleanup: Get "prevdos_line_length" option only once per connect not once
+        per line
  * Roland Stigge
    - Bugfix: Encoding of "po/fr.po"
 
